kubernetes-v2/tech/applications/authelia/deployment.yaml
---

apiVersion: apps/v1
kind: Deployment

metadata:
  name: authelia
  namespace: authelia

spec:
  replicas: 1
  selector:
    matchLabels:
      app: authelia
  template:
    metadata:
      labels:
        app: authelia
    spec:
      containers:
        - name: main
          image: authelia/authelia:4.39.14
          ports:
            - name: http
              containerPort: 9091

          volumeMounts:
            - name: data
              mountPath: /var/lib/authelia
            - name: config
              mountPath: /config/configuration.yml
              subPath: configuration.yml
              # readOnly: true
            - name: config
              mountPath: /config/users.yml
              subPath: users.yml
              # readOnly: true

      volumes:
        - name: config
          secret:
            secretName: config
            items:
              - key: configuration.yml
                path: configuration.yml
              - key: users.yml
                path: users.yml
        - name: data
          persistentVolumeClaim:
            claimName: authelia-data
